--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Tony Grace Ministry</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <style>
     body {
       margin: 0;
@@ -12,29 +13,35 @@
       color: #333;
       text-align: center;
     }
+
     header {
       background: #111;
       color: #fff;
       padding: 60px 20px;
     }
+
     header h1 {
       margin: 0;
-      font-size: 2.5em;
+      font-size: 2.6em;
     }
+
     header p {
       margin-top: 10px;
       font-size: 1.1em;
       opacity: 0.9;
     }
+
     section {
       padding: 40px 20px;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
     }
+
     h2 {
       margin-bottom: 15px;
       color: #222;
     }
+
     .card {
       background: #fff;
       padding: 25px;
@@ -42,55 +49,112 @@
       border-radius: 8px;
       box-shadow: 0 2px 8px rgba(0,0,0,0.08);
     }
+
     .btn {
       display: inline-block;
       margin: 10px;
-      padding: 12px 25px;
+      padding: 12px 26px;
       background: #007bff;
       color: #fff;
       text-decoration: none;
       border-radius: 5px;
       font-weight: bold;
     }
-    .btn.secondary {
+
+    .btn.green {
       background: #28a745;
     }
+
+    .btn.dark {
+      background: #444;
+    }
+
     footer {
       background: #111;
       color: #fff;
       padding: 20px;
       font-size: 0.9em;
+      margin-top: 40px;
     }
   </style>
 </head>
+
 <body>
 
+<!-- HERO -->
 <header>
   <h1>Tony Grace Ministry</h1>
-  <p>Music • Word • Outreach</p>
+  <p>Gospel Music • Ministry • Evangelism</p>
 </header>
 
+<!-- ABOUT -->
 <section>
   <div class="card">
     <h2>About the Ministry</h2>
     <p>
-      Tony Grace Ministry is dedicated to sharing the gospel through music,
-      teaching, and outreach. The ministry focuses on faith, hope, and
-      transformation through Christ.
+      Tony Grace Ministry is dedicated to spreading the Gospel of Jesus Christ
+      through music, teaching, and outreach. The ministry focuses on faith,
+      hope, and transformation through the power of God.
     </p>
   </div>
+</section>
 
+<!-- MUSIC DESCRIPTION -->
+<section>
   <div class="card">
-    <h2>Ministry Services</h2>
+    <h2>Music Ministry</h2>
     <p>
-      Worship & Ministration • Church Programs • Outreach Events • Personal Ministry
+      Music is a vessel through which the Word of God is communicated.
+      Through worship, gospel songs, and inspired sounds, Tony Grace Ministry
+      seeks to glorify Christ, strengthen believers, and reach souls.
     </p>
   </div>
+</section>
 
+<!-- MUSIC LINKS -->
+<section>
   <div class="card">
-    <h2>Support & Bookings</h2>
-    <a class="btn" href="#">Make a Donation</a>
-    <a class="btn secondary" href="#">Book the Ministry</a>
+    <h2>Music & Media</h2>
+    <p>Listen, watch, and download ministry content on these platforms.</p>
+
+    <a href="https://www.youtube.com/@tonyavornyo4885" target="_blank" class="btn">
+      🎥 YouTube
+    </a>
+
+    <a href="https://audiomack.com" target="_blank" class="btn dark">
+      🎵 Audiomack
+    </a>
+
+    <a href="https://www.boomplay.com" target="_blank" class="btn dark">
+      ▶️ Boomplay
+    </a>
+  </div>
+</section>
+
+<!-- BOOKINGS -->
+<section>
+  <div class="card">
+    <h2>Bookings & Ministry Engagements</h2>
+    <p>
+      Available for church programs, worship ministration,
+      outreach events, and special services.
+    </p>
+
+    <a href="https://wa.me/233538000199" class="btn green">
+      📞 Book via WhatsApp
+    </a>
+  </div>
+</section>
+
+<!-- DONATIONS -->
+<section>
+  <div class="card">
+    <h2>Donations</h2>
+    <p>Giving options are available below.</p>
+    <p>
+      <strong>MTN MoMo:</strong> 0538000199<br>
+      <strong>Vodafone Cash:</strong> 0XXXXXXXXX
+    </p>
   </div>
 </section>
 
