--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
 
 <!-- HERO -->
 <header>
+  <img src="profile.jpg" alt="Tony Grace Ministry"
+       style="width:140px;height:140px;border-radius:50%;margin-bottom:15px;object-fit:cover;">
+
   <h1>Tony Grace Ministry</h1>
   <p>Gospel Music • Ministry • Evangelism</p>
 </header>
