--- a/index.html
+++ b/index.html
@@ -91,13 +91,34 @@
 </header>
 
 <!-- ABOUT -->
+<!-- MUSIC -->
 <section>
   <div class="card">
-    <h2>About the Ministry</h2>
+    <h2>Music Ministry</h2>
     <p>
-      Tony Grace Ministry is dedicated to spreading the Gospel of Jesus Christ
-      through music, teaching, and outreach. The ministry focuses on faith,
-      hope, and transformation through the power of God.
+      Tony Grace Ministry releases gospel music inspired by the Holy Spirit,
+      focused on worship, healing, faith, and evangelism. These songs are meant
+      to draw hearts closer to God and spread the message of Christ.
+    </p>
+
+    <p><strong>Listen & Watch:</strong></p>
+
+    <p>
+      🎬 <a href="https://www.youtube.com/@tonyavornyo4885" target="_blank">
+        YouTube Channel
+      </a>
+    </p>
+
+    <p>
+      🎧 <a href="https://audiomack.com/" target="_blank">
+        Audiomack
+      </a>
+    </p>
+
+    <p>
+      🔊 <a href="https://www.boomplay.com/" target="_blank">
+        Boomplay
+      </a>
     </p>
   </div>
 </section>
